# rhythmbox

./: README.md  configure.ac
data/: org.gnome.rhythmbox.gschema.xml
plugins/: Makefile.am
plugins/deezer/: Makefile.am  rb-deezer-entry-type.c  rb-deezer-player.c  rb-deezer-plugin.c  rb-deezer-plugin.h  rb-deezer-source.c  rb-deezer-source.h
plugins/deezerpl/: Makefile.am  deezer-popup.ui  deezer.plugin.in  libdeezer.tgz  rb-deezer-entry-type.h  rb-deezer-login.c  rb-deezer-login.h  rb-deezer-offline-entry-type.c  rb-deezer-offline-entry-type.h  rb-deezer-offline-source.c  rb-deezer-offline-source.h  rb-deezer-player.c  rb-deezer-player.h  rb-deezer-plugin.c  rb-deezer-plugin.h  rb-deezer-source.c  rb-deezer-source.h
po/: POTFILES.in
rhythmdb/: rhythmdb-entry-type.h
shell/: rb-shell-player.c  rb-shell-player.h
sources/: rb-browser-source.h  rb-source.h
